# neon-dreams

./: .gitignore  CMakeLists.txt  LICENSE  dependencies.sh
docs/: fonts.txt  items.txt  license_hist.txt  stack.txt
include/: item.hpp  item_validate.hpp  logger.h  logger.hpp
src/: item.cpp  main.cpp
tools/: item_editor.rb  item_packager.rb  npc_editor.rb  npc_packager.rb
